# Gintaras

./: .gitignore  README.md  build.gradle  settings.gradle
.github/workflows/: android-ci.yml  apple-build.yml  appstore-upload.yml  ios-ipa.yml  ios-macos-release.yml  testflight.yml
app/: build.gradle  proguard-rules.pro
core/: Cargo.toml
core/examples/: dump.rs  engine_synth.rs  normalize.rs  synth_hash.rs  transcribe.rs  units.rs
core/include/: gintaras.h
core/src/: conversion.rs  engine.rs  ffi.rs  lib.rs  normalizer.rs  numbers.rs  sequencer.rs  synth.rs  transcriber.rs  voicedb.rs
docs/: ANALYSIS.md  LICENSE_REMOVAL.md  TRANSCR_RE.md
engine/decompiled/: MANIFEST.txt  README.md  database.decomp.txt  dictionary.decomp.txt  javajni.decomp.txt  main.decomp.txt  md5.decomp.txt  trans.decomp.txt  translate.decomp.txt  voicesynth.decomp.txt
engine/extracted/: WinTalker.Voice.apk
engine/reconstructed/: libtranscr.h  main.bin.rebuilt.luajit
engine/synth_research/: bc_uv.lua  (+29 more)
engine/transcr_c/: CMakeLists.txt  INIT_NOTES.md  PATTERNS.md  PRADAPDZOD_NOTES.md  README.md  SKIEM_FINDINGS.md  SKIEM_NOTES.md  STRESS_NOTES.md  TRANSKR_NOTES.md  diff_test.md  extract_tables.py  function_words.c  g2p_phoneme_table.c  g2p_phonemes.tsv  golden_big.tsv  golden_combined.tsv  golden_corpus.tsv  golden_holdout.tsv  golden_holdout2.tsv  golden_skiem.tsv  skiem.c  test_core.c  test_skiem_accuracy.c  test_transcr.c  test_transkr_accuracy.c  transcr.c  transcr_core.c  transcr_tables.c  transcr_tables.h  transkr.c
ios/: README.md  build-rust.sh  project.yml
tools/: ci_build_luajit.sh  decrypt_mainbin.py  delicense_mainbin.py  extract_modules.lua  extract_modules.py  gen_reference.py  parse_dta.py  rebuild_mainbin.py  requirements.txt  transcr_oracle.py
(+95 files in other folders)
