[package]
name = "gintaras-core"
version = "0.1.0"
edition = "2021"
description = "Gintaras Lithuanian TTS engine — portable core (shared by Android/iOS/...)."

[lib]
name = "gintaras_core"
# rlib for tests, staticlib for iOS, cdylib for JNI/others.
crate-type = ["rlib", "staticlib", "cdylib"]

[profile.release]
opt-level = 3
lto = true
